--- a/books/simulation - ross/ch-2.ipynb
+++ b/books/simulation - ross/ch-2.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T08:09:44.055472Z",
+     "start_time": "2017-05-01T08:09:43.283734Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -323,6 +329,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,22 +361,57 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-30T19:18:48.986978Z",
+     "start_time": "2017-04-30T19:18:48.980882Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4486492089660403"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random.random()"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 129,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T07:46:47.398652Z",
+     "start_time": "2017-05-01T07:46:47.393424Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.count_nonzero([False, False, True])"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,8 +426,32 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 157,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T07:59:06.728635Z",
+     "start_time": "2017-05-01T07:59:06.326452Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for num_iterations = 10000, avg: 2.7139 sd: 0.8711181263181246\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAbQAAAD8CAYAAAAfSFHzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl8HPWZ5/HP04du+ZaNMTa2MZcNGBuNweOcXDEwmRBI\nNiQcCYRlMhl2ICEzSwyTTTbDTEgyLGECOF6cBLKezEzAORZCOB2ybIg9sjH45Ag2YGMZWT4kWVcf\nz/zRJdGSWlJLlix3+ft+vfrl6qpfVz+lkvXtqvr1r8zdERERKXSRkS5ARERkKCjQREQkFBRoIiIS\nCgo0EREJBQWaiIiEggJNRERCQYEmIiKhoEATEZFQiI10ASIikr+1a9dOjMViDwCncfQdlKSBjclk\n8vqzzjrr3e4LRyzQJkyY4NOnTx+ptxcRKUjXXXdd++WXX/5WVVXVvkgkclQN9ZROp62urm52bW3t\nA8Cfd18+YoE2ffp0ampqRurtRUQK0lNPPUVVVVXD0RZmAJFIxKuqqg7U1taelnP54S5IREQGz8w4\nGsOsQ7DtObNLgSYiIqGgQBMRkRGXSCQOeR0KNBERGbDzzz//hDlz5pw6a9asOd/97ncnAJSVlc37\n/Oc/P3XWrFlzFi5ceNI777wTA1iwYMHJ11577dRTTjll9oknnjhn1apVZQBf/vKXj7300ktnzJ8/\n/5TLLrtsxje+8Y2Jn/zkJ6cDrFmzpvTEE0+c09jYmHdOqdu+iEiB+puHX5r6am1j2VCu86RjKpu/\n84m5b/fXbsWKFdsnTZqUampqsnnz5s2+6qqr9rW0tESqq6sPLl++/O2vfOUrk2+99dZjH3roobcA\nWlpaIlu3bt38+OOPV9xwww0zXnvttU0Ar732Wsnq1au3VlRUeCqV4uyzzz75oYceGvPtb3978r33\n3ru9srIynW/tCjQRERmwO++8c9Jjjz02BqC2tja+adOmkkgkwvXXX78X4Lrrrqu/7LLLZnW0/8xn\nPrMX4KKLLmpqamqK7NmzJwqwePHi/RUVFQ4QjUZ56KGHtlVXV8+58sor6y688MKDA6lJgSYiUqDy\nOZIaDo8++mjlc889V1lTU7O1srIyvWDBgpNbWlp6nBo0s5zT2c/Ly8u7HIFt2bKlpKysLF1bWxsf\naF1HxTW0xzfs4u29zSNdhohIKOzfvz86evToVGVlZfrFF18seemll8oB0uk0P/rRj8YC/PjHPx6/\nYMGCxo7X/PSnPx0L8MQTT1RUVlamxo8fn+q+3vr6+ugtt9wy7dlnn926d+/eWMe68hX6IzR35y9X\nrANg+7cuGeFqREQK3+WXX35g2bJlVTNnzpwzc+bM1rlz5x4EKC0tTa9Zs6b8O9/5zrHjx49PrFy5\n8o2O15SUlPipp546O5lM2rJly7blWu8XvvCFqddff/27Z5xxRtuDDz64/dxzzz35wgsvbJwyZUoy\nn7pCH2hrtu0d6RJEREKltLTUf/e7372Wa9kDDzywA9jRff7nPve5+h/+8IddTpHedddd72Q//9nP\nfra9Y3rWrFmJt956a+NA6gr9KcdPLfvDSJcgIiKHQaiP0H73at1IlyAictRobm5+Mdf8NWvWvHI4\n3j+0R2iPrN3BNT9c02VeMpX31xlERKTAhDbQHn35nR7z9rcc+tAqIiJyZApFoO060MKX/209rYkU\nja0J/u4XG5lZVdGj3f7m9hGoTkREDodQXEP7+q828cSm3VwwexJbahv5yR/e7LL8snlTWPniTvYe\n1BHaSEuk0vzVinWcOW0MX/zQrP5fICKSp4IPNHfniU27Afj5izuZNbHnkdncqWNY+eJO1r21jwUz\nxh3uEoVMkM35H0/Qnsxcx3xy826+/Zuu14kXzhzPde+bwQWzJ9GWTGEYRbHDdxLB3XGHSMT6bywi\nR5yCD7QDWdfFnty8myc37+58XlVZzA+uPouiaOaP4rce38oXPnjCYa/xaOSeuf9gXVMb/+eFN7nn\n2df7fc0Lb9Tzwhv1Pebf/akzuXDOJErjUdKeCUczKI5FD6nGu558pbOumVXlvFGXGTZu9uRRfHrB\nVMqKYrSn0ry6u5FN7zQwtizOGceN4ewZ45g/bSwPvrCdRCrNxadPprI4TsqdlkSKomiEMWVx4tHc\nYdzcnqSsqOD/64kccQruf9XNN9/M+vXrO59vrW3s9drYgXiULz81BoDa4A/l/FX/wKjSAQ8RJnlw\nh9ZkiuJYpNcvtE8eXcrx4zODg+9uaAUyHzzqm9ppakuSdqeusa3La674l9zvN2NCOZNGlfRZU3sq\nTQRjW/1B6pvaiEUMzHr0eK0F4tEI7vBsOs2zeWxvh7/uZX5pUZSSWJREKk0y7UQjxsG2zIAH48uL\nKC+O0diapDgeYe/BdsqLYlRVFjO6NI4ZpB1aEylSaWd/c4LKkhhNbUkqS2IURSMUx6LEoj2PJtPu\ntCbSlMaj2DAfbLYkUtQ3tdPcniTtmbBOpJwxpXEqSmJUlsSImNGWTBMBLGKdHzBbEylaE5nRj2KR\nCBUlMYpjESJmXepOu9OWTLOnqQ0cRpXGqSyJcbAt8/poxGhPZn7G9U1tFMUilMajJNJOOu2k3YlF\nI6TTTnlxLPgQ7CRTTnE8SnEsQirtRCJGLGKk0k48GsEMiqIRyotjlBZFcXfSaYhGjcaWBGkyPacN\nI5FKU1YUpbQoSksiRSwSoSgWyfy+5XDmmWdy9913D+/OGWb33XffuPvvv39SIpGw+fPnH3zooYfe\njMVGNlIKLtC666ujR0uix1BhbN7VwDkzx/e5zub2FGVFh/bp/2jQ2Jpk0zsH+m1XEo8y59hRPY5Y\nssOoqrKYqspiAE7I6tCTTDtv722mNZHqcjQOsG3PQbbt6TkYdzwaIdHLVzSSaQcyR4+l8Sizc9RV\n39ROayJFQ2uCyaNLMctsayagIrxZ30xDa4Jjx5RSVhSlNZFm78F2Eqk0k0aV0NCaoKElQTrt7Ov2\n+2lmRAz2NSeoP9h1WXuyvUf7bLv6+FGPDj6ktSRSnad1O5QXxzjYlmR0aZzy4hjxaOaPbSKZpiWR\nImJGPGq0JtI0tCYoK4rS1JakPDiKNIPKkjhNrQkw40BzgmS676/ANLYl+9yWvphlQi8WMRLpdJft\nMTN27m/p9bXRiNGaTNPYmux8XhSL0JbMPN/X3I6ZEY8YpUXRzH5uSRCPRki7k0ylg9+OriJmpIOz\nDmbWeQaiP+XFMUrjUZJpp6U9CcFp9Mpjm/L7YfTjuuuum7px48YhvX3Maaed1tx9RI/u1q1bV/Lw\nww+Pq6mp2VpcXOxXXXXVtKVLl46/8cYbe55iOYz6DTQzmwo8BEwi85dgmbt/r1ubvwGuzFrnqUCV\nuw/5uFPdP9VMv/WxPtv/Nhi/cdG3nu38j/DbPsZ0/FnN2/zNwy8zqiTGy1//yCFWGw7ptJNy5+nN\nuznv1Eks+fkGHl6bGdnmmD5et/b28xlfUTwsNb29t5nrH6zhld2dY59y2pRRbN/TTFNbz2Hfvvih\nE7hm4XQmVBRhlvkUfjiuz72zv4WWRIpxZUXsbmzlpImVRCJGXWMbz79ex4YdDZw4qYJFJ0zgjT1N\nPLl5N+ve3MfW2kYmVBRzwexJABw3tpTjxpbSlkjTlkrzhzfq2bmvhZ37WzjQnKA9CPBye+/IdePO\nA53buKepnVjESKadNqDjGNjI/KduJ9PleUwwfxxQVhSluT3zobANiAOjSmIsmjyKPY1tnHHcaOYc\nO5rFpx3DcWNLO//QJ9OOAc+/voea7fs4dkwpL729n4+deSwOvFnfTG1DK7Mnj2LquFLqm9rZtucg\nB9uTNLel2NPUxu6GVvY0tbNh5wEuOWMy86aO4aLTJzOqJMbjG2vZtb+VyaNLOGFiBfsOtnPCxArG\nVxQxqqTvsy9NbUnK4tFer5MmU2li0QitiRTJtPPO/hY27DjA1toGKorjFMUi7G9up6qymJOPqeSY\nUSW0p9IcaEnwZn0zbYkURbEopUURtu1ppmb7Xnbsa2FUaYyGliTFscyR6H+pnjqYX6cjxm9+85vK\njRs3ls2dO/dUgNbW1sjEiRPzGm9xOFl/nzTMbDIw2d3XmVklsBa41N0399L+o8CX3P3cvtZbXV3t\nNTU1gyz7Pf0FWseAxKm0c8KSXwPw2h0XdX4qv/WRl9m5v4WffP5s0mlnZtCmw/qvXcCoknjnf4DW\nROaUWvdbIYRRWzLFybf/ps82lSUxpo4tY86xo/jaR2dT2c8flMOhNZHihT/Ws/CE8ZTEj44j7f3N\n7bSn0owvLybayx/rjg5Uze1Jjh1TCsCxo0vZsb+ZptYk7ztxAvFopMcR676D7extbqckHmVSZTGx\nXq4NyuHx9NNPt59//vkbRrKGO+64Y+I777wTv/fee3eOxPu/9NJLE+bOnTu9+/x+j9DcfRewK5hu\nNLMtwBQgZ6ABnwZ+OvhSh0c0YowrL2LvwcynwTsf38ozW9/tXH7Tv77IL9f3/DL2mf/zqV7XeeOH\nZ/HzF3fy/2/tM7sHLJV2Nr1zgPVv7+drv9wEwLZ/vLjfEE2m0qzetpdFsybg7r22T6WdPU1tvLa7\niauWr+6y7I6Pn8bf/WIj6X7OqJxyTCV/u/hkPnzyxCMu3EviUT58ysSRLuOwGlNW1G8bM2PxaT2P\nqaeN7/uM1djyIsaW979+OXosXry44bLLLpu1ZMmS3VOmTEnu3r07euDAgehJJ500ol/2HdA1NDOb\nDswDVveyvAxYDNx4qIUdqoe/sJDTjxvdZd5nF07nfz39Krf8+0ts2Nn1gkSuMOvP91dleshNv/Ux\npowp7TylmU/4AJ2nZ5Y/v43/+v6ZnZ+sT+h2lAgw46vvzfvjP1xMNGI0tSVJpR0zuOy+3/P6u13P\ny59yTCW1Da2sWXJ+56mnn7ywnb8LQjKX237edXDrCRXF1Nx+fufzdHDxXESOXmeddVbr7bffvvO8\n8847KZ1OE4/H/Z577nlrpAOt31OOnQ3NKoDngDvcfWUvbT4FXOXuH+1l+Q3ADQDTpk07680338zV\nbEB6O+WY695new+2M/+bvR9xdXj17y/ipNsfP6S6OkLn1xt28cUV61hz23lMrHyvE8Q3H93M8udz\n3hKoi4riWM5rQgP1wlfP5S9+spaXd+TuWTCxspixZUWd16T+4gMz+eyfTu88NSUiR4Yj4ZTjSBv0\nKUcAM4sDjwAreguzwBX0cbrR3ZcByyBzDS2f9x6M735ybs75Y8u6Xt8575SJbNnVwDsHWjvnbfj6\nhRTFImz/1iUcaE7Qlkzx2IZdPLGpljfqDnLeqRP5x8vO6AzSc2aO4w9v9Oz70v0oa8Edz7D9W5fw\nbmMrC+54pt9tOOWYSm675FTef2IVDa0JPnn/C106QOTyvSvO5AMnVvFPT73CxadP5jP/+70D6YX/\n+F5H9PuunM/Fp0/OuY6DbZkL17pOIiKFJp9ejgYsB7a4+119tBsNfBC4aujK61uuLuNLr5rP4tNy\n/7HufhrwI3OOYfnn/oRz/+m37Gls69GrcXRZHIhz7aIZXLtoRpdl2UeAb9YfZMe+FhbNmsDbe5t5\n/7dX5Xz/6x+sYcuuhs7nX77gJL74oRNIOyTTaVLpzHdj7n/uj9x03omUF2d2z6iSOE986QOdr2tN\npHjhjXpmVVUwdVxZj+tlf3/p6Z01ujuX3vd7Xnp7PwBrlpzHxD6+u9XxniIihSafv16LgKuBDWbW\n8Y3mJcA0AHdfGsz7OPCku/f8YtAwueSe5zunx5cXUX+wvcd3e/qy8ITM99Ge/tIHD+kLqMePL+f4\n8eUATB3X8wL7w19YyCeWvsDTW94bxWTKmFJu/PCszutRRVnjRC+5+NQ+368kHuXDJ7/X6aGv63Vm\nxi//alF+GyIiUsDy6eX4PJmvq/TX7sfAjw+9pMGpLIlRf7C9c/ii3mz95mI272rg9CmjO7snD3Un\nh63fXEwqGJWgw+2XnMrfP7YlU2txbMh7RorI0SEzYknaIpHIsF22OZKl02kDcn6zPzTnlx6/6QPc\n/cyr3HLByX22K4lHmT9t7LDWkuu7T9e/fyYnTaqkuT3FhcGXZUVEBmr79u0tdXV1o6uqqg4cbaGW\nTqetrq5uNLAx1/JQBNo/f3oepUVRvnpR36fqRtoHTqoa6RJEpMDddttt2xcsWPBWbW3taYTknpYD\nkAY2JpPJ63MtDEWgTctx3UpEJIzq6uqSc+fO/fORruNIFIp0T/Y3rIWIiIReOAKtl5HVRUTk6BGK\nQEvlOdqJiIiEVygCrfgw3AZERESObAWdBJNGZe61Ndzd8EVE5MhX0L0cx5UXc/qUMUfc7UtEROTw\nK+gjNHdHdzIREREo+EDjkMZgFBGR8CjsQMOJKNFERIQCD7S0jtBERCRQ0IHW/T5gIiJy9CrYXo7p\ntPPHuoMUxXqObC8iIkefgj1Ce3ln5m7V2XeAFhGRo1fBBlp9U9tIlyAiIkeQfgPNzKaa2Soz22xm\nm8zspl7afcjM1gdtnhv6Urv6/IM1w/0WIiJSQPK5hpYEbnH3dWZWCaw1s6fcfXNHAzMbA9wHLHb3\nt8xs4jDVKyIiklO/R2juvsvd1wXTjcAWYEq3Zp8BVrr7W0G7d4e6UBERkb4M6BqamU0H5gGruy06\nCRhrZr81s7Vmds3QlNe/711x5uF6KxEROYLl3W3fzCqAR4Cb3b1718IYcBZwHlAKvGBmf3D3V7ut\n4wbgBoBp06YdSt2diqIF269FRESGUF5pYGZxMmG2wt1X5miyA3jC3Q+6+x7gd8Dc7o3cfZm7V7t7\ndVVV1aHU3Smi0YlFRIT8ejkasBzY4u539dLsl8D7zCxmZmXA2WSutQ27qEYKERER8jvluAi4Gthg\nZuuDeUuAaQDuvtTdt5jZb4CXgTTwgLtvHI6CARpbE53TEZ1xFBER8gg0d38e6PcwyN2/A3xnKIrq\nzw+ee6NzWqPti4gIFOhIIY53Tkd1DU1ERCjQQMu+bqYjNBERgQINtB37WjqnFWgiIgIFGmjZpxl1\nxlFERKBAA60o9l7ZuoYmIiJQoIEWzxodRHesFhERKNBAi5hOOYqISFcFGWi7G1s7p3XKUUREoEAD\n7bGXd3VOq5ejiIhAgQZaNuWZiIhACAJtf3Oi/0YiIhJ6BR9ob+w5ONIliIjIEaDgA600Hh3pEkRE\n5AhQ8IH2pyeMH+kSRETkCFDwgVZenM8t3UREJOwKOtD+743vY3RpfKTLEBGRI0BBB9q08WUjXYKI\niBwh+g00M5tqZqvMbLOZbTKzm3K0+ZCZHTCz9cHja8NTbvf3PRzvIiIihSCfC1BJ4BZ3X2dmlcBa\nM3vK3Td3a/f/3P3Phr7E3rn330ZERI4O/R6hufsud18XTDcCW4Apw11YPlJpJZqIiGQM6BqamU0H\n5gGrcyxeaGYvmdnjZjZnCGrrv57D8SYiIlIQ8g40M6sAHgFudveGbovXAce7+1zgn4Ff9LKOG8ys\nxsxq6urqBlszi+ccA8DY8qJBr0NERMIlr0AzsziZMFvh7iu7L3f3BndvCqZ/DcTNbEKOdsvcvdrd\nq6uqqgZd9JiyOBMriwf9ehERCZ98ejkasBzY4u539dLmmKAdZrYgWG/9UBaazV09HEVEpKt8ejku\nAq4GNpjZ+mDeEmAagLsvBT4B/KWZJYEW4Ar34e2DaLqCJiIiWfoNNHd/nn76X7j794HvD1VR/XHU\nu1FERLoqyJFCdMpRRES6K8hAA3XZFxGRrgoy0HTCUUREuivMQHMwnXMUEZEsBXkzsUfW7RjpEkRE\n5AhTkEdoIiIi3SnQREQkFBRoIiISCgo0EREJBQWaiIiEggJNRERCQYEmIiKhoEATEZFQKLhAW/fW\nvpEuQUREjkAFF2h7m9pHugQRETkCFVygaQhHERHJpeACTUREJJd+A83MpprZKjPbbGabzOymPtr+\niZklzewTQ1tm9nsM15pFRKSQ5TPafhK4xd3XmVklsNbMnnL3zdmNzCwK3Ak8OQx1ioiI9KnfIzR3\n3+Xu64LpRmALMCVH0/8GPAK8O6QVdmO6V7WIiOQwoGtoZjYdmAes7jZ/CvBx4P6hKkxERGQg8g40\nM6sgcwR2s7s3dFt8N/Df3T3dzzpuMLMaM6upq6sbeLWA44N6nYiIhFted6w2sziZMFvh7itzNKkG\n/tUyPTYmABebWdLdf5HdyN2XAcsAqqurlUwiIjJk+g00y6TUcmCLu9+Vq427z8hq/2Pg0e5hJiIi\nMpzyOUJbBFwNbDCz9cG8JcA0AHdfOky15aROISIikku/gebuz0P+KeLunzuUgvpdv66hiYhIDhop\nREREQkGBJiIioVBwgeY64ygiIjkUXKBpLEcREcml4AJNREQkFwWaiIiEQsEFmq6hiYhILgUXaCIi\nIrko0EREJBQUaCIiEgoKNBERCQUFmoiIhIICTUREQkGBJiIioaBAExGRUFCgiYhIKCjQREQkFPoN\nNDObamarzGyzmW0ys5tytPmYmb1sZuvNrMbM3jc85Wq0fRERyS2WR5skcIu7rzOzSmCtmT3l7puz\n2jwD/Mrd3czOAP4dOGUY6hUREcmp3yM0d9/l7uuC6UZgCzClW5sm985hg8uBYRtC2NAhmoiI9DSg\na2hmNh2YB6zOsezjZrYVeAy4biiKyyUWVaCJiEhPeQeamVUAjwA3u3tD9+Xu/nN3PwW4FPhmL+u4\nIbjGVlNXVzeogieNKgHg6x+dPajXi4hIOOUVaGYWJxNmK9x9ZV9t3f13wEwzm5Bj2TJ3r3b36qqq\nqkEV3HFis6qyZFCvFxGRcMqnl6MBy4Et7n5XL21mBe0ws/lAMVA/lIX2fM/hXLuIiBSafHo5LgKu\nBjaY2fpg3hJgGoC7LwUuB64xswTQAnwqq5OIiIjIsOs30Nz9eei7a6G73wncOVRFiYiIDJRGChER\nkVBQoImISCgo0EREJBQKLtB8+AYhERGRAlZwgdZBvfZFRCRbwQaaiIhINgWaiIiEggJNRERCQYEm\nIiKhoEATEZFQKLhA0wiRIiKSS8EFWgeNti8iItkKNtBERESyKdBERCQUFGgiIhIKCjQREQkFBZqI\niIRCv4FmZlPNbJWZbTazTWZ2U442V5rZy2a2wcx+b2Zzh6dcddsXEZHcYnm0SQK3uPs6M6sE1prZ\nU+6+OavNNuCD7r7PzC4ClgFnD0O9WdRvX0RE3tNvoLn7LmBXMN1oZluAKcDmrDa/z3rJH4DjhrhO\nERGRPg3oGpqZTQfmAav7aPZ54PHBlyQiIjJw+ZxyBMDMKoBHgJvdvaGXNh8mE2jv62X5DcANANOm\nTRtwsSIiIr3J6wjNzOJkwmyFu6/spc0ZwAPAx9y9Plcbd1/m7tXuXl1VVTXYmkVERHrIp5ejAcuB\nLe5+Vy9tpgErgavd/dWhLVFERKR/+ZxyXARcDWwws/XBvCXANAB3Xwp8DRgP3JfJP5LuXj305YKj\nfvsiItJTPr0cn6efPvLufj1w/VAVlQ+Nti8iItk0UoiIiISCAk1EREJBgSYiIqGgQBMRkVBQoImI\nSCgUXKBptH0REcml4AKtg3rti4hItoINNBERkWwKNBERCQUFmoiIhIICTUREQkGBJiIioaBAExGR\nUCjYQDMNty8iIlkKNtBERESyKdBERCQUFGgiIhIK/QaamU01s1VmttnMNpnZTTnanGJmL5hZm5l9\nZXhKFRER6V0sjzZJ4BZ3X2dmlcBaM3vK3TdntdkL/DVw6XAUKSIi0p9+j9DcfZe7rwumG4EtwJRu\nbd519/8AEsNSZZf3Gu53EBGRQjSga2hmNh2YB6wejmIGQp32RUQkW96BZmYVwCPAze7eMJg3M7Mb\nzKzGzGrq6uoGswoREZGc8go0M4uTCbMV7r5ysG/m7svcvdrdq6uqqga7GhERkR7y6eVowHJgi7vf\nNfwliYiIDFw+vRwXAVcDG8xsfTBvCTANwN2XmtkxQA0wCkib2c3A7MGemhQRERmofgPN3Z+nnz4Y\n7l4LHDdURfX5Xqibo4iI9FSwI4VobGIREclWsIEmIiKSTYEmIiKhoEATEZFQUKCJiEgoKNBERCQU\nCi7QNDixiIjkUnCB1kHd9kVEJFvBBpqIiEg2BZqIiISCAk1EREJBgSYiIqGgQBMRkVAouEBTr30R\nEcml4AKtg/V9RxsRETnKFGygiYiIZFOgiYhIKPQbaGY21cxWmdlmM9tkZjflaGNmdo+ZvW5mL5vZ\n/OEpV0REJLdYHm2SwC3uvs7MKoG1ZvaUu2/OanMRcGLwOBu4P/hXRETksOj3CM3dd7n7umC6EdgC\nTOnW7GPAQ57xB2CMmU0e8mpFRER6MaBraGY2HZgHrO62aArwdtbzHfQMvSHxH9v2DsdqRUSkwOUd\naGZWATwC3OzuDYN5MzO7wcxqzKymrq5uMKtg/vFjuXz+cZw5dcygXi8iIuGUzzU0zCxOJsxWuPvK\nHE12AlOznh8XzOvC3ZcBywCqq6sH9R3ps44fy1nHjx3MS0VEJMTy6eVowHJgi7vf1UuzXwHXBL0d\nzwEOuPuuIaxTRESkT/kcoS0CrgY2mNn6YN4SYBqAuy8Ffg1cDLwONAPXDn2pIiIives30Nz9eeh7\nnCl3d+CvhqooERGRgdJIISIiEgoKNBERCQUFmoiIhIICTUREQkGBJiIioWCZDooj8MZmdcCbg3z5\nBGDPEJZTCLTNRwdt89HhULb5eHevGspiwmLEAu1QmFmNu1ePdB2Hk7b56KBtPjocjdt8OOiUo4iI\nhIICTUREQqFQA23ZSBcwArTNRwdt89HhaNzmYVeQ19BERES6K9QjNBERkS4KLtDMbLGZvWJmr5vZ\nrSNdz2CZ2VQzW2Vmm81sk5ndFMwfZ2ZPmdlrwb9jg/lmZvcE2/2ymc3PWtdng/avmdlnR2qb8mVm\nUTN70cweDZ7PMLPVwbb9m5kVBfOLg+evB8unZ63jq8H8V8zsIyOzJfkxszFm9rCZbTWzLWa2MOz7\n2cy+FPxebzSzn5pZSdj2s5n90MzeNbONWfOGbL+a2VlmtiF4zT3BrbykL+5eMA8gCvwRmAkUAS8B\ns0e6rkE2y8fVAAADqklEQVRuy2RgfjBdCbwKzAa+DdwazL8VuDOYvhh4nMydD84BVgfzxwFvBP+O\nDabHjvT29bPtXwb+BXg0eP7vwBXB9FLgL4PpLwJLg+krgH8LpmcH+74YmBH8TkRHerv62N4HgeuD\n6SJgTJj3MzAF2AaUZu3fz4VtPwMfAOYDG7PmDdl+BdYEbS147UUjvc1H+mPECxjgL9BC4Ims518F\nvjrSdQ3Rtv0SuAB4BZgczJsMvBJM/wD4dFb7V4LlnwZ+kDW/S7sj7UHmbubPAOcCjwb/WfcAse77\nGHgCWBhMx4J21n2/Z7c70h7A6OCPu3WbH9r9HATa28Ef6Viwnz8Sxv0MTO8WaEOyX4NlW7Pmd2mn\nR+5HoZ1y7PiP0mFHMK+gBadY5gGrgUn+3t2+a4FJwXRv215oP5O7gb8F0sHz8cB+d08Gz7Pr79y2\nYPmBoH0hbfMMoA74UXCa9QEzKyfE+9nddwLfBd4CdpHZb2sJ937uMFT7dUow3X2+9KHQAi10zKwC\neAS42d0bspd55qNZaLqhmtmfAe+6+9qRruUwipE5LXW/u88DDpI5FdUphPt5LPAxMmF+LFAOLB7R\nokZA2PZrISi0QNsJTM16flwwryCZWZxMmK1w95XB7N1mNjlYPhl4N5jf27YX0s9kEfDnZrYd+Fcy\npx2/B4wxs467p2fX37ltwfLRQD2Ftc07gB3uvjp4/jCZgAvzfj4f2Obude6eAFaS2fdh3s8dhmq/\n7gymu8+XPhRaoP0HcGLQW6qIzAXkX41wTYMS9FhaDmxx97uyFv0K6Ojp9Fky19Y65l8T9JY6BzgQ\nnNp4ArjQzMYGn4wvDOYdcdz9q+5+nLtPJ7PvnnX3K4FVwCeCZt23ueNn8YmgvQfzrwh6x80ATiRz\nAf2I4+61wNtmdnIw6zxgMyHez2RONZ5jZmXB73nHNod2P2cZkv0aLGsws3OCn+E1WeuS3oz0RbyB\nPsj0FnqVTI+n20a6nkPYjveROR3xMrA+eFxM5trBM8BrwNPAuKC9AfcG270BqM5a13XA68Hj2pHe\ntjy3/0O818txJpk/VK8DPwOKg/klwfPXg+Uzs15/W/CzeIUjvPcXcCZQE+zrX5DpzRbq/Qx8A9gK\nbAR+QqanYqj2M/BTMtcIE2SOxD8/lPsVqA5+fn8Evk+3jkV69HxopBAREQmFQjvlKCIikpMCTURE\nQkGBJiIioaBAExGRUFCgiYhIKCjQREQkFBRoIiISCgo0EREJhf8EjBeatj8Wkc4AAAAASUVORK5C\nYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1111ec400>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def get_N2():\n",
     "    csum, n = 0, 0\n",
@@ -442,8 +508,24 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T08:10:28.581363Z",
+     "start_time": "2017-05-01T08:10:28.304289Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da14d76b50ae46f8a6f382fc4cc05820"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def plot_grv(p=0.1):\n",
     "    q = 1-p\n",
@@ -460,42 +542,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,7 +606,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
