--- a/math/probability-distributions/poisson.ipynb
+++ b/math/probability-distributions/poisson.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T17:25:47.279244Z",
+     "start_time": "2017-05-01T17:25:46.753813Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -314,8 +320,34 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-01T17:27:57.450412Z",
+     "start_time": "2017-05-01T17:27:56.993342Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "acf84cf59c7447f592e545ef2c865be6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.interact_poisson>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# poisson distribution\n",
     "# the peak of the poisson moves along with the lambda, its mean\n",
@@ -364,7 +396,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
