--- a/ml/sampling-methods/basic-sampling.ipynb
+++ b/ml/sampling-methods/basic-sampling.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-23T18:38:07.274773Z",
+     "start_time": "2017-04-23T18:38:04.200310Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "outputs": [],
    "source": [
     "import functools as ft\n",
@@ -33,7 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "initialization\n",
     "$\n",
@@ -92,7 +107,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "$\n",
     "\\newcommand{\\C}{\\mathbb{C}}\n",
@@ -116,7 +136,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "sum, product\n",
     "$\n",
@@ -148,7 +173,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "alphabet shortcuts\n",
     "$\n",
@@ -243,7 +273,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "math shortcuts\n",
     "$\n",
@@ -298,7 +333,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "aliases for distributions\n",
     "$\\newcommand{\\multivarcoeff}{\\frac{1}{(2\\pi)^{D/2}}\n",
@@ -323,8 +363,32 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-08-24T02:05:43.633282",
+     "start_time": "2016-08-24T02:05:43.628864"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>div.cell{width:50%;margin-left:25%;margin-right:auto;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"<style>\"\\\n",
     "    \"div.cell{\"\\\n",
@@ -397,24 +461,75 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-23T18:41:30.102831Z",
+     "start_time": "2017-04-23T18:41:30.097076Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.arange(1000).shape"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-23T18:47:45.740709Z",
+     "start_time": "2017-04-23T18:47:45.734546Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  0.1,  0.2,  0.3,  0.4,  0.5,  0.6,  0.7,  0.8,  0.9,  1. ])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linspace(0,1,11)"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-23T18:53:40.428240Z",
+     "start_time": "2017-04-23T18:53:37.884624Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZUAAAEKCAYAAADaa8itAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFh1JREFUeJzt3X+w3XV95/HnSyK2UitBb5FN4oaVjB1kdle8C+zodFp/\nQFCnoTPqQN0lbplmd8RdXTuj0O1MOig7sNpSmVZ2IlDDjgUZtCW7RGkG6bgzK8gNKj+luYUoyQCJ\nhB+1bnXB9/5xPpGTeG/uJfmec+659/mYOXO/3/f38z3n85kjefn9fH+cVBWSJHXhJaPugCRp8TBU\nJEmdMVQkSZ0xVCRJnTFUJEmdMVQkSZ0xVCRJnTFUJEmdMVQkSZ1ZNqg3TnIt8G5gT1WdctC23wM+\nDUxU1Q+SBPgM8E7gR8AHquru1nY98Adt109W1eZWfxPweeAXga3Ah2sejwd49atfXatXrz7yAUrS\nErJ9+/YfVNXEXO0GFir0/sH/U+C6/mKSVcCZwPf7ymcDa9rrdOAq4PQkxwEbgUmggO1JtlTVU63N\n7wJ30guVtcBX5urU6tWrmZqaOqKBSdJSk+R782k3sOmvqvo6sG+GTVcAH6MXEvutA66rnjuAY5Oc\nAJwFbKuqfS1ItgFr27Zfrqo72tHJdcA5gxqLJGl+hnpOJck6YHdVfeegTSuAR/vWd7Xaoeq7ZqhL\nkkZokNNfB0jycuD36U19DVWSDcAGgNe+9rXD/nhJWjKGeaTyOuBE4DtJdgIrgbuTvAbYDazqa7uy\n1Q5VXzlDfUZVtamqJqtqcmJizvNMkqTDNLRQqap7q+pXqmp1Va2mN2V1alU9DmwBzk/PGcAzVfUY\ncCtwZpLlSZbTO8q5tW17NskZ7cqx84GbhzUWSdLMBhYqSa4HvgG8PsmuJBccovlW4GFgGvgc8EGA\nqtoHfAK4q70uaTVam6vbPn/HPK78kiQNVpbaLz9OTk6WlxRL0ouTZHtVTc7VzjvqJUmdMVQkSZ0x\nVF6E1RfdMuouSNKCZqhIkjpjqEiSOmOoSJI6Y6hIkjpjqEiSOmOoSJI6Y6hIkjpjqEiSOmOovEje\nAClJszNUJEmdMVQkSZ0xVCRJnTFUJEmdMVQkSZ0xVCRJnTFUJEmdMVQOg/eqSNLMDBVJUmcMFUlS\nZwYWKkmuTbInyX19tU8l+W6Se5L8ZZJj+7ZdnGQ6yUNJzuqrr2216SQX9dVPTHJnq38xydGDGosk\naX4GeaTyeWDtQbVtwClV9c+BvwUuBkhyMnAu8Ia2z2eTHJXkKODPgLOBk4HzWluAy4Erquok4Cng\nggGORZI0DwMLlar6OrDvoNpfV9VzbfUOYGVbXgfcUFU/rqpHgGngtPaarqqHq+onwA3AuiQB3grc\n1PbfDJwzqLFIkuZnlOdUfgf4SlteATzat21Xq81WfxXwdF9A7a/PKMmGJFNJpvbu3dtR9yVJBxtJ\nqCT5L8BzwBeG8XlVtamqJqtqcmJiYhgfKUlL0tBDJckHgHcD76+qauXdwKq+Zitbbbb6k8CxSZYd\nVB8a71WRpJ831FBJshb4GPCbVfWjvk1bgHOTvCzJicAa4JvAXcCadqXX0fRO5m9pYXQ78J62/3rg\n5mGNQ5I0s0FeUnw98A3g9Ul2JbkA+FPgFcC2JN9O8t8Bqup+4EbgAeCrwIVV9Xw7Z/Ih4FbgQeDG\n1hbg48BHk0zTO8dyzaDGIkman2VzNzk8VXXeDOVZ/+GvqkuBS2eobwW2zlB/mN7VYZKkBcI76iVJ\nnTFUJEmdMVQkSZ0xVCRJnTFUJEmdMVQkSZ0xVCRJnTFUjoCPapGkAxkqkqTOGCqSpM4YKpKkzhgq\nkqTOGCqSpM4YKpKkzhgqkqTOGCqSpM4YKkfIGyAl6QWGiiSpM4aKJKkzhookqTOGiiSpMwMLlSTX\nJtmT5L6+2nFJtiXZ0f4ub/UkuTLJdJJ7kpzat8/61n5HkvV99Tclubftc2WSDGosc/FkvST1DPJI\n5fPA2oNqFwG3VdUa4La2DnA2sKa9NgBXQS+EgI3A6cBpwMb9QdTa/G7ffgd/liRpyAYWKlX1dWDf\nQeV1wOa2vBk4p69+XfXcARyb5ATgLGBbVe2rqqeAbcDatu2Xq+qOqirgur73kiSNyLDPqRxfVY+1\n5ceB49vyCuDRvna7Wu1Q9V0z1CVJIzSyE/XtCKOG8VlJNiSZSjK1d+/eYXykJC1Jww6VJ9rUFe3v\nnlbfDazqa7ey1Q5VXzlDfUZVtamqJqtqcmJi4ogHIUma2bBDZQuw/wqu9cDNffXz21VgZwDPtGmy\nW4EzkyxvJ+jPBG5t255Ncka76uv8vveSJI3IIC8pvh74BvD6JLuSXABcBrwjyQ7g7W0dYCvwMDAN\nfA74IEBV7QM+AdzVXpe0Gq3N1W2fvwO+MqixzIeXFUsSLBvUG1fVebNsetsMbQu4cJb3uRa4dob6\nFHDKkfRRktQt76iXJHXGUJEkdcZQkSR1xlCRJHXGUJEkdcZQ6ZCXFUta6gwVSVJnDBVJUmcMFUlS\nZwwVSVJnDBVJUmcMlY55BZikpcxQkSR1xlCRJHXGUJEkdcZQkSR1xlAZAE/WS1qqDBVJUmcMFUlS\nZwwVSVJnDBVJUmcMlQHxZL2kpWgkoZLkPye5P8l9Sa5P8gtJTkxyZ5LpJF9McnRr+7K2Pt22r+57\nn4tb/aEkZ41iLJKkFww9VJKsAP4TMFlVpwBHAecClwNXVNVJwFPABW2XC4CnWv2K1o4kJ7f93gCs\nBT6b5KhhjkWSdKBRTX8tA34xyTLg5cBjwFuBm9r2zcA5bXldW6dtf1uStPoNVfXjqnoEmAZOG1L/\nJUkzGHqoVNVu4NPA9+mFyTPAduDpqnquNdsFrGjLK4BH277Ptfav6q/PsI8kaQRGMf21nN5RxonA\nPwGOoTd9NcjP3JBkKsnU3r17B/lRkrSkjWL66+3AI1W1t6r+H/Bl4M3AsW06DGAlsLst7wZWAbTt\nrwSe7K/PsM8BqmpTVU1W1eTExETX45EkNaMIle8DZyR5eTs38jbgAeB24D2tzXrg5ra8pa3Ttn+t\nqqrVz21Xh50IrAG+OaQxzIuXFUtaapbN3aRbVXVnkpuAu4HngG8Bm4BbgBuSfLLVrmm7XAP8jyTT\nwD56V3xRVfcnuZFeID0HXFhVzw91MJKkAww9VACqaiOw8aDyw8xw9VZV/SPw3lne51Lg0s47KEk6\nLC9q+ivJMd4LIkmazSFDJclLkvx2kluS7AG+CzyW5IEkn0py0nC6KUkaB3MdqdwOvA64GHhNVa2q\nql8B3gLcAVye5N8MuI9jzZP1kpaSuc6pvL1d9nuAqtoHfAn4UpKXDqRnkqSxc8gjlf2BkuSPkrzh\nUG0kSZrvifoHgU3tKcH/IckrB9kpSdJ4mleoVNXVVfVm4HxgNXBPkr9I8huD7JwkabzM+5Lidinx\nr7bXD4DvAB9NcsOA+rZoeLJe0lIxr5sfk1wBvBv4GvBfq2r/41AuT/LQoDonSRov872j/h7gD6rq\nH2bY5m+YSJKAuW9+XA1QVX8+U6C0B0K+YiA9kySNnbmOVD6V5CX0nhi8HdgL/AJwEvAb9J4wvJHe\nD2RJkpa4Q4ZKVb23/Rb8+4HfAV4D/F96lxhvBS5tD3yUJGnuq7+q6gHgk8D/pBcmjwB3ATcZKJKk\nfvM9Ub8ZeBa4sq3/NnAd8L5BdEqSNJ7mGyqnVNXJfeu3J3lgEB2SJI2v+d78eHeSM/avJDkdmBpM\nlxYnb4CUtBTMN1TeBPyfJDuT7AS+AfyrJPcmuWdgvVtkDBZJi918p7/WDrQXkqRFYV6hUlXfG3RH\nJEnj70X9Rr0kSYcyklBJcmySm5J8N8mDSf51kuOSbEuyo/1d3tomyZVJppPck+TUvvdZ39rvSLJ+\nFGORJL1gVEcqnwG+WlW/CvwLejdVXgTcVlVrgNvaOsDZwJr22gBcBZDkOHqPiDmd3kMtN+4PooXM\nk/WSFrOhh0r71chfA64BqKqfVNXTwDp6N1nS/p7TltcB11XPHcCxSU4AzgK2VdW+qnoK2IYXFEjS\nSI3iSOVEeg+m/PMk30pydZJjgOOr6rHW5nHg+La8Ani0b/9drTZbXZI0IqMIlWXAqcBVVfVG4B94\nYaoLgKoqoLr6wCQbkkwlmdq7d29XbytJOsgoQmUXsKuq7mzrN9ELmSfatBbt7562fTewqm//la02\nW/3nVNWmqpqsqsmJiYnOBiJJOtDQQ6WqHgceTfL6Vnob8ACwBdh/Bdd6er/hQquf364COwN4pk2T\n3QqcmWR5O0F/ZqtJkkZkvnfUd+0/Al9IcjTwMPDv6AXcjUkuAL7HC09A3gq8E5gGftTaUlX7knyC\n3mP4AS6pqn3DG8LhW33RLey87F2j7oYkdS690xdLx+TkZE1NHd6zMLu+HNhgkTQukmyvqsm52nlH\nvSSpM4aKJKkzhsoIeXe9pMXGUJEkdcZQkSR1xlCRJHXGUJEkdcZQkSR1xlAZMa8Ak7SYGCqSpM4Y\nKpKkzhgqC4BTYJIWC0NFktQZQ0WS1BlDRZLUGUNlgfC8iqTFwFCRJHXGUJEkdcZQWUCcApM07gwV\nSVJnDBVJUmcMFUlSZ0YWKkmOSvKtJP+rrZ+Y5M4k00m+mOToVn9ZW59u21f3vcfFrf5QkrNGM5Ju\neV5F0jgb5ZHKh4EH+9YvB66oqpOAp4ALWv0C4KlWv6K1I8nJwLnAG4C1wGeTHDWkvg+UwSJpXI0k\nVJKsBN4FXN3WA7wVuKk12Qyc05bXtXXa9re19uuAG6rqx1X1CDANnDacEUiSZjKqI5U/AT4G/LSt\nvwp4uqqea+u7gBVteQXwKEDb/kxr/7P6DPtIkkZg6KGS5N3AnqraPsTP3JBkKsnU3r17h/WxkrTk\njOJI5c3AbybZCdxAb9rrM8CxSZa1NiuB3W15N7AKoG1/JfBkf32GfQ5QVZuqarKqJicmJrodzYB4\nXkXSOBp6qFTVxVW1sqpW0zvR/rWqej9wO/Ce1mw9cHNb3tLWadu/VlXV6ue2q8NOBNYA3xzSMCRJ\nM1hI96l8HPhokml650yuafVrgFe1+keBiwCq6n7gRuAB4KvAhVX1/NB7PUAerUgaN8vmbjI4VfU3\nwN+05YeZ4eqtqvpH4L2z7H8pcOngeihJejEW0pGKZuDRiqRxYqhIkjpjqEiSOmOoSJI6Y6iMAc+r\nSBoXhookqTOGiiSpM4bKmHAKTNI4MFTGiMEiaaEzVMaMwSJpITNUJEmdMVQkSZ0xVCRJnTFUxtDq\ni27x3IqkBclQkSR1xlCRJHXGUBljToFJWmgMlTFnsEhaSAwVSVJnDJVFwKMVSQuFoSJJ6oyhskh4\ntCJpIRh6qCRZleT2JA8kuT/Jh1v9uCTbkuxof5e3epJcmWQ6yT1JTu17r/Wt/Y4k64c9FknSgUZx\npPIc8HtVdTJwBnBhkpOBi4DbqmoNcFtbBzgbWNNeG4CroBdCwEbgdOA0YOP+IFqqvNNe0qgNPVSq\n6rGqurst/z3wILACWAdsbs02A+e05XXAddVzB3BskhOAs4BtVbWvqp4CtgFrhziUBctgkTQqIz2n\nkmQ18EbgTuD4qnqsbXocOL4trwAe7dttV6vNVp/pczYkmUoytXfv3s76L0k60MhCJckvAV8CPlJV\nz/Zvq6oCqqvPqqpNVTVZVZMTExNdve2C5tGKpFEYSagkeSm9QPlCVX25lZ9o01q0v3tafTewqm/3\nla02W12SNCKjuPorwDXAg1X1x32btgD7r+BaD9zcVz+/XQV2BvBMmya7FTgzyfJ2gv7MVlPj0Yqk\nYRvFkcqbgX8LvDXJt9vrncBlwDuS7ADe3tYBtgIPA9PA54APAlTVPuATwF3tdUmrqY/BImmY0jt9\nsXRMTk7W1NTUYe07zv9A77zsXaPugqQxlmR7VU3O1c476peIcQ5ESePDUJEkdcZQWUI8WpE0aIbK\nEuOjXCQNkqGyRBkskgbBUFnCDBZJXTNUljiDRVKXDBUBhoukbhgq+lmgGCySjpShogMYLJKOhKGi\nn2OwSDpcy0bdAS1M/cHic8MkzZdHKpqTRy6S5stQkSR1xlDRvOx/vItXikk6FENFL5rBImk2hoqO\niMEiqZ+hoiPm1Jik/QwVdao/WAwXaenxPhUN1MHBsvOyd7H6olu890VapAwVDdVsU2SGjLQ4jP30\nV5K1SR5KMp3kolH3R4fn4PMy+2uSxstYH6kkOQr4M+AdwC7griRbquqB0fZMR2K+weJUmrTwjHWo\nAKcB01X1MECSG4B1gKGyBLzYq80MH2nwxj1UVgCP9q3vAk4fUV+0wI1qOq0/zOY6l+SRl8bduIfK\nvCTZAGxoqz9M8tBhvtWrgR9006sFx7ENSC5/cdsO1X4WfnfjadzG9k/n02jcQ2U3sKpvfWWrHaCq\nNgGbjvTDkkxV1eSRvs9C5NjG12Ien2MbP+N+9dddwJokJyY5GjgX2DLiPknSkjXWRypV9VySDwG3\nAkcB11bV/SPuliQtWWMdKgBVtRXYOqSPO+IptAXMsY2vxTw+xzZmUlWj7oMkaZEY93MqkqQFxFCZ\nh8X+KJgkO5Pcm+TbSaZG3Z8jkeTaJHuS3NdXOy7JtiQ72t/lo+zj4ZplbH+YZHf77r6d5J2j7OPh\nSrIqye1JHkhyf5IPt/rYf3eHGNui+O4O5vTXHNqjYP6WvkfBAOctpkfBJNkJTFbVOF0zP6Mkvwb8\nELiuqk5ptf8G7Kuqy9r/KVheVR8fZT8Pxyxj+0Pgh1X16VH27UglOQE4oaruTvIKYDtwDvABxvy7\nO8TY3sci+O4O5pHK3H72KJiq+gmw/1EwWoCq6uvAvoPK64DNbXkzvf+gx84sY1sUquqxqrq7Lf89\n8CC9J2aM/Xd3iLEtSobK3GZ6FMxi+x9EAX+dZHt7+sBic3xVPdaWHweOH2VnBuBDSe5p02NjNz10\nsCSrgTcCd7LIvruDxgaL7LsDQ0U9b6mqU4GzgQvbNMuiVL353sU053sV8DrgXwKPAX802u4cmSS/\nBHwJ+EhVPdu/bdy/uxnGtqi+u/0MlbnN61Ew46yqdre/e4C/pDflt5g80ea1989v7xlxfzpTVU9U\n1fNV9VPgc4zxd5fkpfT+0f1CVX25lRfFdzfT2BbTd9fPUJnbon4UTJJj2slDkhwDnAncd+i9xs4W\nYH1bXg/cPMK+dGr/P7jNbzGm312SANcAD1bVH/dtGvvvbraxLZbv7mBe/TUP7VK/P+GFR8FcOuIu\ndSbJP6N3dAK9Jyz8xTiPL8n1wK/TewLsE8BG4K+AG4HXAt8D3ldVY3fCe5ax/Tq96ZMCdgL/vu8c\nxNhI8hbgfwP3Aj9t5d+nd+5hrL+7Q4ztPBbBd3cwQ0WS1BmnvyRJnTFUJEmdMVQkSZ0xVCRJnTFU\nJEmdMVQkSZ0xVCRJnTFUpBFKckmSj/StX7r/9zakceTNj9IItafWfrmqTk3yEmAHcFpVPTnSjkmH\nadmoOyAtZVW1M8mTSd5I77Hu3zJQNM4MFWn0rqb3C4evAa4dbVekI+P0lzRi7enX9wIvBdZU1fMj\n7pJ02DxSkUasqn6S5HbgaQNF485QkUasnaA/A3jvqPsiHSkvKZZGKMnJwDRwW1XtGHV/pCPlORVJ\nUmc8UpEkdcZQkSR1xlCRJHXGUJEkdcZQkSR1xlCRJHXm/wN5+AGVf6UljQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11b67ff98>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "L = 0.5\n",
     "N = 10**6\n",
@@ -427,7 +542,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -438,7 +556,10 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -459,7 +580,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
