--- a/ml/sampling-methods/metropolis.ipynb
+++ b/ml/sampling-methods/metropolis.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:49:24.768084Z",
+     "start_time": "2017-04-25T18:49:24.736047Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -323,6 +329,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,15 +356,38 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:39:31.130408Z",
+     "start_time": "2017-04-25T18:39:31.124284Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6224022135270637"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random.uniform(0,1)"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:40:22.409992Z",
+     "start_time": "2017-04-25T18:40:22.405850Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -1 => left\n",
@@ -369,8 +399,32 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T19:06:01.508776Z",
+     "start_time": "2017-04-25T19:06:01.184720Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "populations: [1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD4pJREFUeJzt3X+s3XV9x/HnS0C3oRsY7pqurbvEdCa4ZEAaZMEYNiIU\nagYmi4Fk2BCX+gcsmJks1X9wGpL+MXUxcSQonSVDCRGNzWjEjpE4/0DbMgYUZNxgCW0KrcP5YyYa\n8L0/7qd6ir33ntvenu+9fp6P5OR8z/v7+X7P+xByX/1+vt/zPakqJEn9ed3QDUiShmEASFKnDABJ\n6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjp15tANzOe8886r6enpoduQpBVl375936+qqYXG\nLesAmJ6eZu/evUO3IUkrSpLnxxnnFJAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSp\nUwaAJHVqWX8TWJImZXrrA0O3cJwD2zad9vfwCECSOrVgACRZl+ThJE8l2Z/k1lb/WJJDSR5rj2tG\ntvlIkpkkzyS5aqS+sdVmkmw9PR9JkjSOcaaAXgE+XFWPJnkTsC/J7rbu01X1D6ODk1wAXA+8HfgD\n4N+S/FFb/Vng3cBBYE+SnVX11FJ8EEnS4iwYAFV1GDjcln+c5GlgzTybXAvcW1U/A76XZAa4pK2b\nqarnAJLc28YaAJI0gEWdA0gyDVwEfLuVbknyeJLtSc5ttTXACyObHWy1ueqSpAGMHQBJ3gjcD3yo\nqn4E3AG8FbiQ2SOETy5FQ0m2JNmbZO/Ro0eXYpeSpBMYKwCSnMXsH/97quorAFX1UlW9WlW/AD7H\nr6Z5DgHrRjZf22pz1Y9TVXdW1Yaq2jA1teAP2kiSTtI4VwEFuAt4uqo+NVJfPTLsvcCTbXkncH2S\nNyQ5H1gPfAfYA6xPcn6S1zN7onjn0nwMSdJijXMV0GXAjcATSR5rtY8CNyS5ECjgAPBBgKran+Q+\nZk/uvgLcXFWvAiS5BXgQOAPYXlX7l/CzSJIWYZyrgL4F5ASrds2zze3A7Seo75pvO0nS5PhNYEnq\nlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4Z\nAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6debQDUj6zTO99YGh\nWzjOgW2bhm5hWfIIQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkTi0YAEnWJXk4yVNJ9ie5\ntdXfnGR3kmfb87mtniSfSTKT5PEkF4/sa3Mb/2ySzafvY0mSFjLOEcArwIer6gLgUuDmJBcAW4GH\nqmo98FB7DXA1sL49tgB3wGxgALcB7wAuAW47FhqSpMlbMACq6nBVPdqWfww8DawBrgV2tGE7gOva\n8rXA3TXrEeCcJKuBq4DdVfVyVf0A2A1sXNJPI0ka26LOASSZBi4Cvg2sqqrDbdWLwKq2vAZ4YWSz\ng602V12SNICxAyDJG4H7gQ9V1Y9G11VVAbUUDSXZkmRvkr1Hjx5dil1Kkk5grABIchazf/zvqaqv\ntPJLbWqH9nyk1Q8B60Y2X9tqc9WPU1V3VtWGqtowNTW1mM8iSVqEca4CCnAX8HRVfWpk1U7g2JU8\nm4GvjdTf364GuhT4YZsqehC4Msm57eTvla0mSRrAOLeDvgy4EXgiyWOt9lFgG3Bfkg8AzwPva+t2\nAdcAM8BPgZsAqurlJJ8A9rRxH6+ql5fkU0iSFm3BAKiqbwGZY/UVJxhfwM1z7Gs7sH0xDUqSTg+/\nCSxJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkA\nktQpA0CSOjXO7wFIGtj01geGbuE4B7ZtGroFLQGPACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKn\nDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnVowAJJsT3IkyZMj\ntY8lOZTksfa4ZmTdR5LMJHkmyVUj9Y2tNpNk69J/FEnSYoxzBPAFYOMJ6p+uqgvbYxdAkguA64G3\nt23+KckZSc4APgtcDVwA3NDGSpIGsuBPQlbVN5NMj7m/a4F7q+pnwPeSzACXtHUzVfUcQJJ729in\nFt2xJGlJnMo5gFuSPN6miM5ttTXACyNjDrbaXHVJ0kBONgDuAN4KXAgcBj65VA0l2ZJkb5K9R48e\nXardSpJe46QCoKpeqqpXq+oXwOf41TTPIWDdyNC1rTZX/UT7vrOqNlTVhqmpqZNpT5I0hpMKgCSr\nR16+Fzh2hdBO4Pokb0hyPrAe+A6wB1if5Pwkr2f2RPHOk29bknSqFjwJnORLwOXAeUkOArcBlye5\nECjgAPBBgKran+Q+Zk/uvgLcXFWvtv3cAjwInAFsr6r9S/5pJEljG+cqoBtOUL5rnvG3A7efoL4L\n2LWo7iRJp82CASD9ppne+sDQLRznwLZNQ7egTnkrCEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQp\nA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIA\nJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqfOHLoBrWzTWx8YuoXjHNi2aegWpBXDIwBJ6pQBIEmd\nMgAkqVMGgCR1ygCQpE4ZAJLUqQUDIMn2JEeSPDlSe3OS3Umebc/ntnqSfCbJTJLHk1w8ss3mNv7Z\nJJtPz8eRJI1rnCOALwAbX1PbCjxUVeuBh9prgKuB9e2xBbgDZgMDuA14B3AJcNux0JAkDWPBAKiq\nbwIvv6Z8LbCjLe8Arhup312zHgHOSbIauArYXVUvV9UPgN38eqhIkiboZM8BrKqqw235RWBVW14D\nvDAy7mCrzVX/NUm2JNmbZO/Ro0dPsj1J0kJO+SRwVRVQS9DLsf3dWVUbqmrD1NTUUu1WkvQaJxsA\nL7WpHdrzkVY/BKwbGbe21eaqS5IGcrIBsBM4diXPZuBrI/X3t6uBLgV+2KaKHgSuTHJuO/l7ZatJ\nkgay4N1Ak3wJuBw4L8lBZq/m2Qbcl+QDwPPA+9rwXcA1wAzwU+AmgKp6OckngD1t3Mer6rUnliVJ\nE7RgAFTVDXOsuuIEYwu4eY79bAe2L6o7SdJp4zeBJalTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcM\nAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOrXg3UA1OdNbHxi6heMc2LZp6BYknUYeAUhS\npwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXK\nAJCkThkAktQpA0CSOmUASFKnTikAkhxI8kSSx5LsbbU3J9md5Nn2fG6rJ8lnkswkeTzJxUvxASRJ\nJ2cpjgD+rKourKoN7fVW4KGqWg881F4DXA2sb48twB1L8N6SpJN0OqaArgV2tOUdwHUj9btr1iPA\nOUlWn4b3lySN4VQDoIBvJNmXZEurraqqw235RWBVW14DvDCy7cFWkyQN4MxT3P6dVXUoye8Du5N8\nd3RlVVWSWswOW5BsAXjLW95yiu1JkuZySkcAVXWoPR8BvgpcArx0bGqnPR9pww8B60Y2X9tqr93n\nnVW1oao2TE1NnUp7kqR5nHQAJDk7yZuOLQNXAk8CO4HNbdhm4GtteSfw/nY10KXAD0emiiRJE3Yq\nU0CrgK8mObafL1bV15PsAe5L8gHgeeB9bfwu4BpgBvgpcNMpvLck6RSddABU1XPAn5yg/j/AFSeo\nF3Dzyb6fJGlp+U1gSeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0y\nACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR16qR/FH4lmN76wNAt\n/NKBbZuGbkGSjuMRgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKRO\nTTwAkmxM8kySmSRbJ/3+kqRZEw2AJGcAnwWuBi4AbkhywSR7kCTNmvQRwCXATFU9V1U/B+4Frp1w\nD5IkJh8Aa4AXRl4fbDVJ0oSlqib3ZslfAhur6q/b6xuBd1TVLSNjtgBb2su3Ac9MrMG5nQd8f+gm\nFmGl9Qv2PCkrreeV1i8sj57/sKqmFho06d8DOASsG3m9ttV+qaruBO6cZFMLSbK3qjYM3ce4Vlq/\nYM+TstJ6Xmn9wsrqedJTQHuA9UnOT/J64Hpg54R7kCQx4SOAqnolyS3Ag8AZwPaq2j/JHiRJsyb+\nk5BVtQvYNen3PUXLakpqDCutX7DnSVlpPa+0fmEF9TzRk8CSpOXDW0FIUqcMgHmstNtWJNme5EiS\nJ4fuZVxJ1iV5OMlTSfYnuXXonuaT5LeSfCfJf7V+/37onsaV5Iwk/5nkX4fuZRxJDiR5IsljSfYO\n3c84kpyT5MtJvpvk6SR/OnRP83EKaA7tthX/Dbyb2S+s7QFuqKqnBm1sHkneBfwEuLuq/njofsaR\nZDWwuqoeTfImYB9w3XL975wkwNlV9ZMkZwHfAm6tqkcGbm1BSf4W2AD8blW9Z+h+FpLkALChqoa+\npn5sSXYA/1FVn29XOv5OVf3v0H3NxSOAua2421ZU1TeBl4fuYzGq6nBVPdqWfww8zTL+dnjN+kl7\neVZ7LPt/RSVZC2wCPj90L7+pkvwe8C7gLoCq+vly/uMPBsB8vG3FhCWZBi4Cvj1sJ/NrUymPAUeA\n3VW1rPtt/hH4O+AXQzeyCAV8I8m+doeA5e584Cjwz22q7fNJzh66qfkYAFoWkrwRuB/4UFX9aOh+\n5lNVr1bVhcx+k/2SJMt6ui3Je4AjVbVv6F4W6Z1VdTGzdw++uU1xLmdnAhcDd1TVRcD/Acv63KEB\nMLcFb1uhpdHm0u8H7qmqrwzdz7ja4f3DwMahe1nAZcBftDn1e4E/T/Ivw7a0sKo61J6PAF9ldlp2\nOTsIHBw5Ivwys4GwbBkAc/O2FRPQTqreBTxdVZ8aup+FJJlKck5b/m1mLxL47rBdza+qPlJVa6tq\nmtn/j/+9qv5q4LbmleTsdlEAbRrlSmBZX91WVS8CLyR5WytdASzLixmOmfg3gVeKlXjbiiRfAi4H\nzktyELitqu4atqsFXQbcCDzR5tUBPtq+Mb4crQZ2tKvEXgfcV1Ur4rLKFWYV8NXZfx9wJvDFqvr6\nsC2N5W+Ae9o/Gp8Dbhq4n3l5GagkdcopIEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUA\nSFKn/h8cKBes8tb7RQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1099c4198>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "n = 7\n",
     "populations = [x+1 for x in range(n)]\n",
@@ -405,23 +459,73 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:53:05.455367Z",
+     "start_time": "2017-04-25T18:53:05.449766Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([2128, 2534, 1451, 1653, 1208, 830, 197])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Counter(island_history)"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:52:42.066963Z",
+     "start_time": "2017-04-25T18:52:41.820641Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Container object of 3 artists>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD8xJREFUeJzt3H+sX3V9x/Hnay3g1I0ivWGsLbssNlvQaGQ3iCExxC7K\nD0NJhqbESGEszTacOpZodclIXEwwW2SyOUxjmWUhCEE3Oq1zDWDM/qDzgohAVe5QbJsiV8CqY+q6\nvffH91O8lrb3cr+39wv9PB/JN/dzPudzznl/T0/v655zvt+TqkKS1J9fGnUBkqTRMAAkqVMGgCR1\nygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnVo66gKOZPny5TU+Pj7qMiTpReXee+/9flWNzTbu\nBR0A4+PjTE5OjroMSXpRSfLYXMZ5CUiSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1atYASHJjkieS\nPDij76+SfCPJA0n+KcmyGfM+kGQqyTeTvGVG/3mtbyrJxoV/K5Kk52MuZwCfAs47qG878Oqqeg3w\nLeADAEnOANYBr2rL/H2SJUmWAB8HzgfOAC5tYyVJIzJrAFTVl4GnDur7t6ra3ybvAVa29lrg01X1\n06r6NjAFnNVeU1X1aFX9DPh0GytJGpGF+Cbw7wO3tvYKBoFwwO7WB7DroP7XL8C2JekFbXzj5+e1\n3HeuvXCBK3muoW4CJ/lzYD9w88KUA0k2JJlMMjk9Pb1Qq5UkHWTeAZDkcuCtwDuqqlr3HmDVjGEr\nW9/h+p+jqjZV1URVTYyNzfosI0nSPM0rAJKcB7wPuKiqnpkxayuwLskJSU4HVgP/AXwFWJ3k9CTH\nM7hRvHW40iVJw5j1HkCSW4BzgeVJdgPXMPjUzwnA9iQA91TVH1bVQ0luAx5mcGnoqqr637aedwFf\nBJYAN1bVQ0fh/UiS5mjWAKiqSw/RvfkI4z8MfPgQ/duAbc+rOknSUeM3gSWpUwaAJHXKAJCkThkA\nktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJ\nnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHVq1gBIcmOSJ5I8\nOKPvFUm2J3mk/Typ9SfJ9UmmkjyQ5MwZy6xv4x9Jsv7ovB1J0lzN5QzgU8B5B/VtBO6sqtXAnW0a\n4HxgdXttAG6AQWAA1wCvB84CrjkQGpKk0Zg1AKrqy8BTB3WvBba09hbg4hn9N9XAPcCyJKcCbwG2\nV9VTVfU0sJ3nhookaRHN9x7AKVW1t7UfB05p7RXArhnjdre+w/U/R5INSSaTTE5PT8+zPEnSbIa+\nCVxVBdQC1HJgfZuqaqKqJsbGxhZqtZKkg8w3AL7XLu3Qfj7R+vcAq2aMW9n6DtcvSRqR+QbAVuDA\nJ3nWA3fM6L+sfRrobGBfu1T0ReDNSU5qN3/f3PokSSOydLYBSW4BzgWWJ9nN4NM81wK3JbkSeAx4\nexu+DbgAmAKeAa4AqKqnkvwl8JU27kNVdfCNZUnSIpo1AKrq0sPMWnOIsQVcdZj13Ajc+LyqkyQd\nNX4TWJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmd\nMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1Kml\noy5AeiEb3/j5eS33nWsvXOBKpIU31BlAkj9N8lCSB5PckuQlSU5PsiPJVJJbkxzfxp7Qpqfa/PGF\neAOSpPmZdwAkWQG8G5ioqlcDS4B1wEeA66rqlcDTwJVtkSuBp1v/dW2cJGlEhr0HsBT45SRLgZcC\ne4E3Abe3+VuAi1t7bZumzV+TJENuX5I0T/MOgKraA/w18F0Gv/j3AfcCP6iq/W3YbmBFa68AdrVl\n97fxJ893+5Kk4QxzCegkBn/Vnw78OvAy4LxhC0qyIclkksnp6elhVydJOoxhLgH9LvDtqpquqv8B\nPgucAyxrl4QAVgJ7WnsPsAqgzT8RePLglVbVpqqaqKqJsbGxIcqTJB3JMAHwXeDsJC9t1/LXAA8D\ndwOXtDHrgTtae2ubps2/q6pqiO1LkoYwzD2AHQxu5t4HfL2taxPwfuDqJFMMrvFvbotsBk5u/VcD\nG4eoW5I0pKG+CFZV1wDXHNT9KHDWIcb+BHjbMNuTJC0cHwUhSZ0yACSpUwaAJHXKAJCkThkAktQp\nA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIA\nJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0aKgCSLEtye5JvJNmZ5A1JXpFke5JH\n2s+T2tgkuT7JVJIHkpy5MG9BkjQfw54BfAz416r6beC1wE5gI3BnVa0G7mzTAOcDq9trA3DDkNuW\nJA1h3gGQ5ETgjcBmgKr6WVX9AFgLbGnDtgAXt/Za4KYauAdYluTUeVcuSRrKMGcApwPTwD8k+WqS\nTyZ5GXBKVe1tYx4HTmntFcCuGcvvbn2SpBEYJgCWAmcCN1TV64D/4ueXewCoqgLq+aw0yYYkk0km\np6enhyhPknQkwwTAbmB3Ve1o07czCITvHbi0034+0ebvAVbNWH5l6/sFVbWpqiaqamJsbGyI8iRJ\nRzLvAKiqx4FdSX6rda0BHga2Autb33rgjtbeClzWPg10NrBvxqUiSdIiWzrk8n8C3JzkeOBR4AoG\noXJbkiuBx4C3t7HbgAuAKeCZNlaSNCJDBUBV3Q9MHGLWmkOMLeCqYbYnSVo4fhNYkjplAEhSpwwA\nSeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCk\nThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSp4YOgCRL\nknw1yefa9OlJdiSZSnJrkuNb/wlteqrNHx9225Kk+VuIM4D3ADtnTH8EuK6qXgk8DVzZ+q8Enm79\n17VxkqQRGSoAkqwELgQ+2aYDvAm4vQ3ZAlzc2mvbNG3+mjZekjQCw54B/A3wPuD/2vTJwA+qan+b\n3g2saO0VwC6ANn9fG/8LkmxIMplkcnp6esjyJEmHM+8ASPJW4ImquncB66GqNlXVRFVNjI2NLeSq\nJUkzLB1i2XOAi5JcALwE+FXgY8CyJEvbX/krgT1t/B5gFbA7yVLgRODJIbYvSRrCvM8AquoDVbWy\nqsaBdcBdVfUO4G7gkjZsPXBHa29t07T5d1VVzXf7kqThHI3vAbwfuDrJFINr/Jtb/2bg5NZ/NbDx\nKGxbkjRHw1wCelZVfQn4Ums/Cpx1iDE/Ad62ENuTJA3PbwJLUqcMAEnqlAEgSZ0yACSpUwaAJHXK\nAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwA\nSeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqfmHQBJViW5O8nDSR5K8p7W/4ok25M8\n0n6e1PqT5PokU0keSHLmQr0JSdLzN8wZwH7gz6rqDOBs4KokZwAbgTurajVwZ5sGOB9Y3V4bgBuG\n2LYkaUjzDoCq2ltV97X2j4CdwApgLbClDdsCXNzaa4GbauAeYFmSU+dduSRpKAtyDyDJOPA6YAdw\nSlXtbbMeB05p7RXArhmL7W59kqQRWDrsCpK8HPgM8N6q+mGSZ+dVVSWp57m+DQwuEXHaaacNVdv4\nxs/Pa7nvXHvhUNuVpBeDoc4AkhzH4Jf/zVX12db9vQOXdtrPJ1r/HmDVjMVXtr5fUFWbqmqiqibG\nxsaGKU+SdATDfAoowGZgZ1V9dMasrcD61l4P3DGj/7L2aaCzgX0zLhVJkhbZMJeAzgHeCXw9yf2t\n74PAtcBtSa4EHgPe3uZtAy4ApoBngCuG2LYkaUjzDoCq+ncgh5m95hDjC7hqvtuTJC0svwksSZ0y\nACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNA\nkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ1a9ABI\ncl6SbyaZSrJxsbcvSRpY1ABIsgT4OHA+cAZwaZIzFrMGSdLAYp8BnAVMVdWjVfUz4NPA2kWuQZLE\n4gfACmDXjOndrU+StMiWjrqAgyXZAGxokz9O8s2jtKnlwPcPWcNHjtIWX1wOu3/0LI+hI/MYmt3R\nOoZ+Yy6DFjsA9gCrZkyvbH3PqqpNwKajXUiSyaqaONrbebFy/8zOfXRk7p/ZjXofLfYloK8Aq5Oc\nnuR4YB2wdZFrkCSxyGcAVbU/ybuALwJLgBur6qHFrEGSNLDo9wCqahuwbbG3ewhH/TLTi5z7Z3bu\noyNz/8xupPsoVTXK7UuSRsRHQUhSp475AJjt0RNJTkhya5u/I8n44lc5OnPYP5cnmU5yf3v9wSjq\nHJUkNyZ5IsmDh5mfJNe3/fdAkjMXu8ZRmsP+OTfJvhnHz18sdo2jlmRVkruTPJzkoSTvOcSY0RxH\nVXXMvhjcaP5P4DeB44GvAWccNOaPgU+09jrg1lHX/QLbP5cDfzfqWke4j94InAk8eJj5FwBfAAKc\nDewYdc0vsP1zLvC5Udc54n10KnBma/8K8K1D/D8byXF0rJ8BzOXRE2uBLa19O7AmSRaxxlHy0Ryz\nqKovA08dYcha4KYauAdYluTUxalu9Oawf7pXVXur6r7W/hGwk+c+AWEkx9GxHgBzefTEs2Oqaj+w\nDzh5Uaobvbk+muP32mnp7UlWHWJ+z3y8yezekORrSb6Q5FWjLmaU2iXm1wE7Dpo1kuPoWA8ADe9f\ngPGqeg2wnZ+fLUlzcR/wG1X1WuBvgX8ecT0jk+TlwGeA91bVD0ddDxz7ATDroydmjkmyFDgReHJR\nqhu9uTya48mq+mmb/CTwO4tU24vFXI6xblXVD6vqx629DTguyfIRl7XokhzH4Jf/zVX12UMMGclx\ndKwHwFwePbEVWN/alwB3Vbsr04FZ989B1yEvYnD9Uj+3FbisfYrjbGBfVe0ddVEvFEl+7cA9tSRn\nMfid08sfWMDgEz7AZmBnVX30MMNGchy94J4GupDqMI+eSPIhYLKqtjL4h/nHJFMMbmatG13Fi2uO\n++fdSS4C9jPYP5ePrOARSHILg0+yLE+yG7gGOA6gqj7B4FvtFwBTwDPAFaOpdDTmsH8uAf4oyX7g\nv4F1Hf2BdcA5wDuBrye5v/V9EDgNRnsc+U1gSerUsX4JSJJ0GAaAJHXKAJCkThkAktQpA0CSOmUA\nSFKnDABJ6pQBIEmd+n/aRS9lMfYI4AAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x108d69828>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.bar([0, 1, 2], [197,830,1208], 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:52:22.713381Z",
+     "start_time": "2017-04-25T18:52:22.706351Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.bar?"
@@ -429,36 +533,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +590,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
