--- a/ml/sampling-methods/sampling-importance-resampling.ipynb
+++ b/ml/sampling-methods/sampling-importance-resampling.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T13:13:45.426302Z",
+     "start_time": "2017-04-25T13:13:44.922005Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import functools as ft\n",
@@ -323,8 +329,28 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T13:09:28.438967Z",
+     "start_time": "2017-04-25T13:09:28.433178Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>div.cell{width:80%;margin-left:10%;margin-right:auto;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"<style>\"\\\n",
     "    \"div.cell{\"\\\n",
@@ -349,8 +375,25 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T13:34:30.306737Z",
+     "start_time": "2017-04-25T13:34:20.781783Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYcAAAD8CAYAAACcjGjIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFNJJREFUeJzt3X3MnfV93/H3Z3ahbZqBAY8SG9WOYmVzok0hFqFLV0U4\nAgNRzKokM5qKm6BZXcma7EGpWaRShSLBupU1WkNEgxcToQClybCKU+ISomjSIBhCCI/1HTDFFg9u\nDKQdKqnT7/44P7MT/85t377P/WT8fklH57p+1+861/dc57rP51wP59ypKiRJGvYP5rsASdLCYzhI\nkjqGgySpYzhIkjqGgySpYzhIkjqGgySpYzhIkjqGgySps3i+C5iu0047rVasWDHfZUjSMeWBBx74\nq6paeqR+x2w4rFixgp07d853GZJ0TEnyzFT6eVhJktQxHCRJHcNBktQxHCRJHcNBktQxHCRJHcNB\nktQxHCRJHcNBktQ5Zr8hLS1UKzbfOe15d19z0QxWIk2few6SpI57DtII43z6l94I3HOQJHUMB0lS\nx3CQJHUMB0lSx3CQJHUMB0lSx3CQJHUMB0lSx3CQJHWOGA5JtiR5MckjQ22/l+SJJA8n+WqSk4em\nXZFkIsmTSc4fal/X2iaSbB5qX5nkvtZ+a5ITZvIJSpKO3lT2HL4IrDukbQfwzqr6p8BfAFcAJFkN\nbADe0eb5XJJFSRYBfwhcAKwGLml9Aa4FrquqtwEvAZeN9YwkSWM7YjhU1beA/Ye0fb2qDrTRe4Hl\nbXg9cEtVvVZVTwMTwNntNlFVT1XVj4BbgPVJApwL3N7m3wpcPOZzkiSNaSbOOXwM+FobXgY8OzRt\nT2ubrP1U4OWhoDnYPlKSTUl2Jtm5b9++GShdkjTKWOGQ5NPAAeDmmSnn8KrqhqpaU1Vrli5dOheL\nlKTj0rR/sjvJrwEfANZWVbXmvcCZQ92WtzYmaf8BcHKSxW3vYbi/JGmeTGvPIck64FPAB6vq1aFJ\n24ANSU5MshJYBXwbuB9Y1a5MOoHBSettLVTuAT7U5t8I3DG9pyJJmilTuZT1y8D/Ad6eZE+Sy4D/\nAbwZ2JHkoSSfB6iqR4HbgMeAPwMur6oft72CjwN3AY8Dt7W+AL8F/IckEwzOQdw4o89QknTUjnhY\nqaouGdE86Rt4VV0NXD2ifTuwfUT7UwyuZpIkLRB+Q1qS1PF/SEsLyLj/u3r3NRfNUCU63hkOesMa\n941WOp55WEmS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEc\nJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEmdI4ZDki1JXkzyyFDbKUl2JNnV\n7pe09iT5bJKJJA8nOWtono2t/64kG4fa353ke22ezybJTD9JSdLRmcqewxeBdYe0bQburqpVwN1t\nHOACYFW7bQKuh0GYAFcC7wHOBq48GCitz78Zmu/QZUmS5tgRw6GqvgXsP6R5PbC1DW8FLh5qv6kG\n7gVOTnIGcD6wo6r2V9VLwA5gXZv2D6vq3qoq4Kahx5IkzZPpnnM4vaqea8PPA6e34WXAs0P99rS2\nw7XvGdE+UpJNSXYm2blv375pli5JOpKxT0i3T/w1A7VMZVk3VNWaqlqzdOnSuVikJB2XphsOL7RD\nQrT7F1v7XuDMoX7LW9vh2pePaJckzaPphsM24OAVRxuBO4baL21XLZ0DvNIOP90FnJdkSTsRfR5w\nV5v2wyTntKuULh16LEnSPFl8pA5Jvgy8DzgtyR4GVx1dA9yW5DLgGeAjrft24EJgAngV+ChAVe1P\nchVwf+v3mao6eJL7NxhcEfUzwNfaTZI0j44YDlV1ySST1o7oW8DlkzzOFmDLiPadwDuPVIckae74\nDWlJUueIew7SfFmx+c75LkE6brnnIEnqGA6SpI7hIEnqGA6SpI4npKU3kHFO4u++5qIZrETHOvcc\nJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkdw0GS1DEcJEkd\nw0GS1DEcJEkdw0GS1BkrHJL8+ySPJnkkyZeT/HSSlUnuSzKR5NYkJ7S+J7bxiTZ9xdDjXNHan0xy\n/nhPSZI0rmmHQ5JlwG8Ca6rqncAiYANwLXBdVb0NeAm4rM1yGfBSa7+u9SPJ6jbfO4B1wOeSLJpu\nXZKk8Y17WGkx8DNJFgM/CzwHnAvc3qZvBS5uw+vbOG362iRp7bdU1WtV9TQwAZw9Zl2SpDFMOxyq\nai/wX4G/ZBAKrwAPAC9X1YHWbQ+wrA0vA55t8x5o/U8dbh8xz09IsinJziQ79+3bN93SJUlHMM5h\npSUMPvWvBN4CvInBYaFZU1U3VNWaqlqzdOnS2VyUJB3Xxjms9H7g6araV1V/B3wFeC9wcjvMBLAc\n2NuG9wJnArTpJwE/GG4fMY8kaR6MEw5/CZyT5GfbuYO1wGPAPcCHWp+NwB1teFsbp03/RlVVa9/Q\nrmZaCawCvj1GXZKkMS0+cpfRquq+JLcDDwIHgO8ANwB3Arck+d3WdmOb5UbgS0kmgP0MrlCiqh5N\nchuDYDkAXF5VP55uXZKk8U07HACq6krgykOan2LE1UZV9bfAhyd5nKuBq8epRZI0c/yGtCSpYzhI\nkjqGgySpYzhIkjqGgySpYzhIkjqGgySpYzhIkjqGgySpYzhIkjpj/XyGdCQrNt853yVImgb3HCRJ\nHfccJAHj7eXtvuaiGaxEC4F7DpKkjuEgSeoYDpKkjuEgSeoYDpKkjuEgSeoYDpKkjuEgSeoYDpKk\nzljhkOTkJLcneSLJ40l+MckpSXYk2dXul7S+SfLZJBNJHk5y1tDjbGz9dyXZOO6TkiSNZ9w9hz8A\n/qyq/jHwz4DHgc3A3VW1Cri7jQNcAKxqt03A9QBJTgGuBN4DnA1ceTBQJEnzY9rhkOQk4JeBGwGq\n6kdV9TKwHtjaum0FLm7D64GbauBe4OQkZwDnAzuqan9VvQTsANZNty5J0vjG2XNYCewD/meS7yT5\nQpI3AadX1XOtz/PA6W14GfDs0Px7Wttk7ZKkeTJOOCwGzgKur6p3Af+X/38ICYCqKqDGWMZPSLIp\nyc4kO/ft2zdTDytJOsQ44bAH2FNV97Xx2xmExQvtcBHt/sU2fS9w5tD8y1vbZO2dqrqhqtZU1Zql\nS5eOUbok6XCmHQ5V9TzwbJK3t6a1wGPANuDgFUcbgTva8Dbg0nbV0jnAK+3w013AeUmWtBPR57U2\nSdI8Gfef/fw74OYkJwBPAR9lEDi3JbkMeAb4SOu7HbgQmABebX2pqv1JrgLub/0+U1X7x6xLkjSG\nscKhqh4C1oyYtHZE3wIun+RxtgBbxqlFkjRz/Ia0JKljOEiSOoaDJKljOEiSOoaDJKljOEiSOoaD\nJKljOEiSOoaDJKljOEiSOoaDJKljOEiSOoaDJKljOEiSOoaDJKljOEiSOoaDJKljOEiSOoaDJKlj\nOEiSOovnuwBJx74Vm++c9ry7r7loBivRTHHPQZLUMRwkSZ2xDyslWQTsBPZW1QeSrARuAU4FHgB+\ntap+lORE4Cbg3cAPgH9VVbvbY1wBXAb8GPjNqrpr3Lo0c8Y5ZCDp2DQTew6fAB4fGr8WuK6q3ga8\nxOBNn3b/Umu/rvUjyWpgA/AOYB3wuRY4kqR5MlY4JFkOXAR8oY0HOBe4vXXZClzchte3cdr0ta3/\neuCWqnqtqp4GJoCzx6lLkjSecfcc/jvwKeDv2/ipwMtVdaCN7wGWteFlwLMAbforrf/r7SPmkSTN\ng2mHQ5IPAC9W1QMzWM+Rlrkpyc4kO/ft2zdXi5Wk4844ew7vBT6YZDeDE9DnAn8AnJzk4Inu5cDe\nNrwXOBOgTT+JwYnp19tHzPMTquqGqlpTVWuWLl06RumSpMOZdjhU1RVVtbyqVjA4ofyNqvrXwD3A\nh1q3jcAdbXhbG6dN/0ZVVWvfkOTEdqXTKuDb061LkjS+2fiG9G8BtyT5XeA7wI2t/UbgS0kmgP0M\nAoWqejTJbcBjwAHg8qr68SzUJUmaohkJh6r6JvDNNvwUI642qqq/BT48yfxXA1fPRC2SpPH5DWlJ\nUsdwkCR1DAdJUsdwkCR1DAdJUsdwkCR1DAdJUsdwkCR1DAdJUsdwkCR1DAdJUsdwkCR1DAdJUsdw\nkCR1DAdJUsdwkCR1DAdJUsdwkCR1ZuN/SGsBWrH5zvkuQRppnG1z9zUXzWAlGuaegySpYzhIkjqG\ngySpYzhIkjrTDockZya5J8ljSR5N8onWfkqSHUl2tfslrT1JPptkIsnDSc4aeqyNrf+uJBvHf1qS\npHGMs+dwAPiPVbUaOAe4PMlqYDNwd1WtAu5u4wAXAKvabRNwPQzCBLgSeA9wNnDlwUCRJM2PaYdD\nVT1XVQ+24b8GHgeWAeuBra3bVuDiNrweuKkG7gVOTnIGcD6wo6r2V9VLwA5g3XTrkiSNb0bOOSRZ\nAbwLuA84vaqea5OeB05vw8uAZ4dm29PaJmuXJM2TscMhyc8BfwJ8sqp+ODytqgqocZcxtKxNSXYm\n2blv376ZelhJ0iHGCockP8UgGG6uqq+05hfa4SLa/YutfS9w5tDsy1vbZO2dqrqhqtZU1ZqlS5eO\nU7ok6TDGuVopwI3A41X1+0OTtgEHrzjaCNwx1H5pu2rpHOCVdvjpLuC8JEvaiejzWpskaZ6M89tK\n7wV+Ffhekoda238GrgFuS3IZ8AzwkTZtO3AhMAG8CnwUoKr2J7kKuL/1+0xV7R+jLknSmKYdDlX1\nv4FMMnntiP4FXD7JY20Btky3FknSzPIb0pKkjuEgSeoYDpKkjuEgSeoYDpKkjuEgSer4P6SPIf4f\naElzxXCQdMwa9wPT7msumqFK3ng8rCRJ6hgOkqSO4SBJ6hgOkqSO4SBJ6hgOkqSO4SBJ6hgOkqSO\nX4KTdNwa50t0b/Qv0BkOc8ifv5B0rPCwkiSpYzhIkjqGgySpYzhIkjqekD5KnlSWBG/8K50WzJ5D\nknVJnkwykWTzfNcjScezBREOSRYBfwhcAKwGLkmyen6rkqTj10I5rHQ2MFFVTwEkuQVYDzw2Gwvz\n0JCk+XQsHJJaEHsOwDLg2aHxPa1NkjQPFsqew5Qk2QRsaqN/k+TJaTzMacBfzVxVM2ah1gULtzbr\nOnoLtTbrmqJcC4xX1y9MpdNCCYe9wJlD48tb20+oqhuAG8ZZUJKdVbVmnMeYDQu1Lli4tVnX0Vuo\ntVnX0ZmLuhbKYaX7gVVJViY5AdgAbJvnmiTpuLUg9hyq6kCSjwN3AYuALVX16DyXJUnHrQURDgBV\ntR3YPgeLGuuw1CxaqHXBwq3Nuo7eQq3Nuo7OrNeVqprtZUiSjjEL5ZyDJGkBeUOGQ5IPJ3k0yd8n\nWXPItCvaT3Q8meT8SeZfmeS+1u/WdpJ8pmu8NclD7bY7yUOT9Nud5Hut386ZrmOSZf5Okr1D9V04\nSb85/cmTJL+X5IkkDyf5apKTJ+k3J+vsSM8/yYntdZ5o29OK2aplaJlnJrknyWPtb+ATI/q8L8kr\nQ6/vb892XUPLPuxrk4HPtnX2cJKz5qCmtw+ti4eS/DDJJw/pMyfrLMmWJC8meWSo7ZQkO5LsavdL\nJpl3Y+uzK8nGsYupqjfcDfgnwNuBbwJrhtpXA98FTgRWAt8HFo2Y/zZgQxv+PPBvZ7ne/wb89iTT\ndgOnzfH6+x3gPx2hz6K2/t4KnNDW6+pZrus8YHEbvha4dr7W2VSeP/AbwOfb8Abg1jl47c4AzmrD\nbwb+YkRd7wP+dC63qam+NsCFwNeAAOcA981xfYuA54FfmI91BvwycBbwyFDbfwE2t+HNo7Z74BTg\nqXa/pA0vGaeWN+SeQ1U9XlWjviC3Hrilql6rqqeBCQY/3fG6JAHOBW5vTVuBi2er1ra8jwBfnq1l\nzJLXf/Kkqn4EHPzJk1lTVV+vqgNt9F4G34eZL1N5/usZbD8w2J7Wttd71lTVc1X1YBv+a+Bxjq1f\nG1gP3FQD9wInJzljDpe/Fvh+VT0zh8t8XVV9C9h/SPPwdjTZ+9H5wI6q2l9VLwE7gHXj1PKGDIfD\nmMrPdJwKvDz0JjTbP+XxL4AXqmrXJNML+HqSB9o3xOfKx9tu/ZZJdmPn+ydPPsbgE+Yoc7HOpvL8\nX+/TtqdXGGxfc6IdxnoXcN+Iyb+Y5LtJvpbkHXNVE0d+beZ7u9rA5B/U5mudnV5Vz7Xh54HTR/SZ\n8fW2YC5lPVpJ/hz4+RGTPl1Vd8x1PaNMscZLOPxewy9V1d4k/wjYkeSJ9uli1moDrgeuYvCHfBWD\nw14fG3eZ49Z1cJ0l+TRwALh5koeZlXV2LEnyc8CfAJ+sqh8eMvlBBodN/qadT/pfwKo5Km3Bvjbt\n3OIHgStGTJ7Pdfa6qqokc3KJ6TEbDlX1/mnMNpWf6fgBg13Zxe3T3sif8piJGpMsBn4FePdhHmNv\nu38xyVcZHM4Y+49pqusvyR8Bfzpi0pR+8mSm60rya8AHgLXVDraOeIxZWWeHmMrzP9hnT3utT2Kw\nfc2qJD/FIBhurqqvHDp9OCyqanuSzyU5rapm/TeEpvDazMp2NUUXAA9W1QuHTpjPdQa8kOSMqnqu\nHWJ7cUSfvQzOixy0nME512k73g4rbQM2tKtIVjJI/m8Pd2hvOPcAH2pNG4HZ2hN5P/BEVe0ZNTHJ\nm5K8+eAwgxOyj4zqO5MOOcb7LydZ5pz/5EmSdcCngA9W1auT9JmrdTaV57+NwfYDg+3pG5MF2kxp\n5zRuBB6vqt+fpM/PHzz3keRsBu8DcxFaU3lttgGXtquWzgFeGTqkMtsm3Yufr3XWDG9Hk70f3QWc\nl2RJOwx8Xmubvtk++z4fNwZvaHuA14AXgLuGpn2awVUmTwIXDLVvB97Sht/KIDQmgD8GTpylOr8I\n/PohbW8Btg/V8d12e5TBoZW5WH9fAr4HPNw2zDMOra2NX8jgapjvz0Vt7fV4Fnio3T5/aF1zuc5G\nPX/gMwzCC+Cn2/Yz0bant87BOvolBocDHx5aTxcCv35wWwM+3tbNdxmc2P/nc7RdjXxtDqktDP7x\n1/fbNrhmjmp7E4M3+5OG2uZ8nTEIp+eAv2vvYZcxOE91N7AL+HPglNZ3DfCFoXk/1ra1CeCj49bi\nN6QlSZ3j7bCSJGkKDAdJUsdwkCR1DAdJUsdwkCR1DAdJUsdwkCR1DAdJUuf/AX4WPRYBtiCwAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11822c7f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "N, u_half_width = 10**5, 10\n",
     "# q: uniform distribution\n",
@@ -385,7 +428,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
