--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-04-25T18:48:57.687625Z",
+     "start_time": "2017-04-25T18:48:57.648394Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -41,6 +47,7 @@
     "\\newcommand{\\Brace}[1]{\\left\\{#1\\right\\}}\n",
     "\\newcommand{\\Bracket}[1]{\\left[#1\\right]}\n",
     "\\newcommand{\\cases}[1]{\\begin{cases}#1\\end{cases}}\n",
+    "\\newcommand{\\Ceil}[1]{\\left\\lceil {#1} \\right\\rceil}\n",
     "\\newcommand{\\cov}[1]{\\text{cov} \\sigma\\left[#1\\right]}\n",
     "\\newcommand{\\diff}[2]{\\frac{d #1}{d #2}}\n",
     "\\newcommand{\\difftwo}[2]{\\frac{d^2 #1}{d {#2}^2}}\n",
@@ -52,6 +59,7 @@
     "\\newcommand{\\frachalf}[1]{\\frac{#1}{2}~}\n",
     "\\newcommand{\\fracone}[1]{\\frac{1}{#1}~}\n",
     "\\newcommand{\\fracrec}[1]{\\frac{1}{#1}~}\n",
+    "\\newcommand{\\Floor}[1]{\\left\\lfloor {#1} \\right\\rfloor}\n",
     "\\newcommand{\\half}{\\fracone{2}}\n",
     "\\newcommand{\\H}[1]{\\mathbb{H}\\left[#1\\right]}\n",
     "\\newcommand{\\Int}[2]{\\displaystyle \\int_{#1}^{#2}~}\n",
@@ -71,6 +79,7 @@
     "\\newcommand{\\P}{\\mathbb{P}}\n",
     "\\newcommand{\\Paran}[1]{\\left(#1\\right)}\n",
     "\\newcommand{\\Partial}[2]{\\frac{\\partial #1}{\\partial #2}}\n",
+    "\\newcommand{\\Recip}[1]{ \\frac{1}{ #1 } }\n",
     "\\newcommand{\\sqrbrkt}[1]{\\Bracket{#1}^2}\n",
     "\\newcommand{\\sqrbrc}[1]{\\Brace{#1}^2}\n",
     "\\newcommand{\\trace}[1]{\\text{Tr}\\left( #1 \\right)}\n",
@@ -323,6 +332,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +362,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -381,6 +392,35 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
