--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -1,41 +1,214 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# preamble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-06-24T15:35:38.035684Z",
+     "start_time": "2017-06-24T15:35:36.054637Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import error while loading spark, skipping\n"
+     ]
+    }
+   ],
+   "source": [
+    "# science-y\n",
+    "#import fbprophet\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import numpy\n",
+    "import numpy.polynomial as np_poly\n",
+    "import pandas as pd\n",
+    "import pystan\n",
+    "import scipy as sp\n",
+    "\n",
+    "#ml stuff\n",
+    "#import pandas_ml as pdml\n",
+    "\n",
+    "import scipy.interpolate as sp_interpolate\n",
+    "import scipy.signal as sp_signal\n",
+    "\n",
+    "# sklearn\n",
+    "import sklearn.discriminant_analysis as sk_disc\n",
+    "import sklearn.ensemble as sk_ensemble\n",
+    "import sklearn.linear_model as sk_lm\n",
+    "import sklearn.metrics as sk_metrics\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn import preprocessing as sk_preprocess\n",
+    "from sklearn import svm as sk_svm\n",
+    "import sklearn.tree as sk_tree\n",
+    "from sklearn import utils as sk_utils\n",
+    "import sklearn.datasets as sk_datasets\n",
+    "#from sklearn.ensemble import AdaBoostClassifier\n",
+    "#from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# spark stuff\n",
+    "try:\n",
+    "    from pyspark.sql import SQLContext\n",
+    "    from pyspark.sql import Row as SqlRow\n",
+    "    import pyspark.ml.classification as ml_cl\n",
+    "    import pyspark.ml.linalg as ml_linalg\n",
+    "    import pyspark.ml.regression as ml_reg\n",
+    "    import pyspark.ml.util as ml_util\n",
+    "    import pyspark.sql.functions as sql_f\n",
+    "    from pyspark.mllib.stat import Statistics as ml_stats\n",
+    "    from pyspark.ml.evaluation import RegressionEvaluator as ml_reg_eval\n",
+    "except ImportError:\n",
+    "    print('import error while loading spark, skipping')\n",
+    "    pass\n",
+    "\n",
+    "# python stuff\n",
+    "import boto\n",
+    "from collections import OrderedDict\n",
+    "import copy\n",
+    "from datetime import datetime, timedelta\n",
+    "from datetime import date as dt_date\n",
+    "import functools as ft\n",
+    "from __future__ import print_function\n",
+    "import itertools\n",
+    "import json\n",
+    "import multiprocessing\n",
+    "import operator\n",
+    "import os\n",
+    "import pickle\n",
+    "from pprint import pprint\n",
+    "import re\n",
+    "import random\n",
+    "import string\n",
+    "import subprocess\n",
+    "import sys\n",
+    "import time\n",
+    "import tqdm\n",
+    "\n",
+    "# viz\n",
+    "from graphviz import Digraph\n",
+    "import matplotlib.colors as mpl_colors\n",
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib.patches as patches\n",
+    "import matplotlib.lines as mlines\n",
+    "import matplotlib.dates as mdates\n",
+    "import mpld3\n",
+    "import pydotplus\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-04-25T18:48:57.687625Z",
-     "start_time": "2017-04-25T18:48:57.648394Z"
+     "end_time": "2017-06-23T12:05:52.453384Z",
+     "start_time": "2017-06-23T12:05:52.447053Z"
     }
    },
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "import functools as ft\n",
-    "from graphviz import Digraph\n",
-    "from ipywidgets import interact, interactive, fixed\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import Math\n",
-    "from IPython.display import Latex\n",
-    "from IPython.display import HTML\n",
-    "from matplotlib import pyplot as plt\n",
-    "import math\n",
-    "import numpy as np\n",
-    "import numpy.polynomial as np_poly\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "from pprint import pprint\n",
-    "import random\n",
-    "import scipy as sp\n",
-    "\n",
-    "from __future__ import print_function\n",
-    "\n",
+    "# widgets\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual, Layout\n",
+    "import ipywidgets\n",
+    "#from IPython.html import widgets as html_widgets\n",
+    "from IPython.display import display as ipython_display\n",
+    "# from IPython.display import Math\n",
+    "# from IPython.display import Latex\n",
+    "# from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-06-23T12:06:00.675189Z",
+     "start_time": "2017-06-23T12:05:59.923082Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
+    "%load_ext Cython\n",
+    "#mpld3.enable_notebook()\n",
     "\n",
     "DIR_HOME = os.environ['HOME']\n",
-    "DIR_REPOS = DIR_HOME + \"/neo-human/repos\"\n",
-    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\"\n"
+    "DIR_REPOS = DIR_HOME + \"/repos\"\n",
+    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\"\n",
+    "DIR_OLA_DATA = DIR_HOME + \"/ola-data\"\n",
+    "fo_data = DIR_OLA_DATA + \"/driver-churn/qubole\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-06-23T12:06:05.398149Z",
+     "start_time": "2017-06-23T12:06:05.388249Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.rcParams['font.family'] = 'DejaVu Sans'\n",
+    "plt.rcParams[\"figure.figsize\"] = [6,4]\n",
+    "\n",
+    "np.set_printoptions(precision=2)\n",
+    "\n",
+    "pd.options.display.float_format = '{:,.2f}'.format\n",
+    "pd.set_option('precision', 2)\n",
+    "pd.set_option('max_colwidth',20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-06-23T12:06:13.328823Z",
+     "start_time": "2017-06-23T12:06:13.323643Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version_info(major=3, minor=6, micro=1, releaselevel='final', serial=0)\n",
+      "3.6.1 (default, Apr  4 2017, 09:36:47) \n",
+      "[GCC 4.2.1 Compatible Apple LLVM 7.0.2 (clang-700.1.81)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sys.version_info)\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-06-23T12:06:17.570168Z",
+     "start_time": "2017-06-23T12:06:17.565477Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if 'sc' in locals():\n",
+    "    sc.setLogLevel(\"WARN\")"
    ]
   },
   {
@@ -344,6 +517,31 @@
     "    \"}\"\\\n",
     "\"</style>\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -386,11 +584,18 @@
    },
    "navigate_menu": true,
    "number_sections": true,
-   "sideBar": false,
+   "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
+   "toc_position": {
+    "height": "791px",
+    "left": "0px",
+    "right": "auto",
+    "top": "131px",
+    "width": "176px"
+   },
    "toc_section_display": "block",
-   "toc_window_display": false,
+   "toc_window_display": true,
    "widenNotebook": false
   },
   "varInspector": {
